Apply proper top-padding

--- a/app/views/mentoring/automation/tooltip_locked.html.haml
+++ b/app/views/mentoring/automation/tooltip_locked.html.haml
@@ -1,4 +1,4 @@
-.p.heading.c-generic-tooltip.text-14.some{style:'padding:24px;width:413px;'}
+.p.heading.c-generic-tooltip.text-14.some{style:'padding:16px 24px;width:413px;'}
   %p.text-16.text-white.font-semibold.leading-170.mb-12
     Requires
     %strong.font-bold= @min_finished_mentoring_sessions.to_s
