--- a/app/views/mentoring/automation/tooltip_locked.html.haml
+++ b/app/views/mentoring/automation/tooltip_locked.html.haml
@@ -9,9 +9,9 @@
     .bg-gradient-to-r.from-gradientProgressBarA.to-gradientProgressBarB.rounded-8.some{style:'min-width:6px; height:100%; width:' +(@finished_mentoring_sessions.to_s)+'%'}
   .mb-16 #{@finished_mentoring_sessions}/100
 
-  %h4.font-semibold.mt-20.mb-4 What is automation?
+  %h4.font-semibold.mb-4 What is automation?
 
-  %p.mb-4
+  %p.mb-4.leading-150
     Automation allows you to submit standardised responses to code submissions that get shared as part of automated feedback on solutions.
 
   = link_to doc_path(:using, "feedback/automated"), class: 'external-link' do
