--- a/app/views/mentoring/automation/tooltip_locked.html.haml
+++ b/app/views/mentoring/automation/tooltip_locked.html.haml
@@ -17,4 +17,4 @@
   = link_to doc_path(:using, "feedback/automated"), class: 'external-link' do
     .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
       Find out more on Automation 
-      = graphical_icon :"arrow-right", css_class: "w-[14px] h-[14px] ml-[8px] filter-lightGold" 
+      = graphical_icon :"arrow-right", css_class: "w-[14px] h-[14px] ml-8 filter-lightGold" 
