--- a/app/views/mentoring/automation/tooltip_locked.html.haml
+++ b/app/views/mentoring/automation/tooltip_locked.html.haml
@@ -1,12 +1,12 @@
-.heading.c-generic-tooltip.text-14{class:"!py-16 !px-24 md:w-[413px] w-auto"}
+.c-generic-tooltip.text-14{ class: "!py-16 !px-24 md:w-[413px] w-auto" }
   %p.text-16.text-white.font-semibold.leading-170.mb-12
     Requires
     %strong.font-bold= @min_finished_mentoring_sessions
-    finished mentoring sessions and a satisfaction rating of #{@min_satisfaction_percentage}% 
+    finished mentoring sessions and a satisfaction rating of #{@min_satisfaction_percentage}%
     %br.hidden.md:block
     (current rating is #{@satisfaction_percentage}%)
-  .bg-darkThemeBackgroundColor.flex.flex-row.rounded-8.mb-6.overflow-hidden{class: 'h-[16px]'}
-    .bg-gradient-to-r.from-gradientProgressBarA.to-gradientProgressBarB.rounded-8.h-100{class:"min-w-[6px]", style: "width:"+@finished_mentoring_sessions.to_s+"%"}
+  .bg-darkThemeBackgroundColor.flex.flex-row.rounded-8.mb-6.overflow-hidden{ class: 'h-[16px]' }
+    .bg-gradient-to-r.from-gradientProgressBarA.to-gradientProgressBarB.rounded-8.h-100{ class: "min-w-[6px]", style: "width:#{@finished_mentoring_sessions}%" }
 
 
   .mb-16 #{@finished_mentoring_sessions}/100
@@ -18,5 +18,5 @@
 
   = link_to doc_path(:using, "feedback/automated"), class: 'external-link' do
     .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
-      Find out more on Automation 
-      = graphical_icon :"arrow-right", css_class: "w-[14px] h-[14px] ml-8 filter-lightGold" 
+      Find out more on Automation
+      = graphical_icon :"arrow-right", css_class: "w-[14px] h-[14px] ml-8 filter-lightGold"
