Draw a fancy chart, show mock data, general setups

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -79,10 +79,16 @@
         .btn.btn-base.btn-secondary
           See how you can support us
           = graphical_icon "arrow-right"
+  .md-container
+    = ReactComponents::Impact::Chart.new([])
 
-  A special thanks to these organisations...
-  And over 700 individuals donors!
 
 
-  We've grown to over 1M students entirely by word of mouth.
-  We work closely with our community to understand how to evolve Exercism to be the best it can be, and they reward us by sharing with their friends.
+
+
+
+  -# A special thanks to these organisations...
+    And over 700 individuals donors!
+    We've grown to over 1M students entirely by word of mouth.
+    We work closely with our community to understand how to evolve Exercism to be the best it can be, and they reward us by sharing with their friends. .
+    .
