Add become a rocket as a separate section. Use negative margin instead of being hand-crafted positioning.

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -79,9 +79,10 @@
         .btn.btn-base.btn-secondary
           See how you can support us
           = graphical_icon "arrow-right"
-  .mb-64
-    = ReactComponents::Impact::Chart.new([])
 
+  = ReactComponents::Impact::Chart.new([])
+  .md-container.mb-64.relative{ class: 'mt-[-64px]' }
+    = ReactComponents::Impact::Rocket.new([])
   .md-container.mb-64
     = ReactComponents::Impact::Testimonials.new([])
 
