--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -7,7 +7,8 @@
         filter: var(--textColor6-filter);
     }
 
-    .filter-white {
+    .filter-white,
+    .white-filter {
         filter: var(--white-filter);
     }
 
