--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -7,6 +7,7 @@
         filter: var(--textColor6-filter);
     }
 
+    .filter-white,
     .white-filter {
         filter: var(--white-filter);
     }
