--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -91,7 +91,18 @@
       And over
       %a.underline{ href: '#', title: 'Individual donors' } 700 individuals donors!
 
-  = ReactComponents::Impact::Chart.new([])
+  .relative
+    %div{class: "absolute top-[49px] left-[20%] flex flex-col w-[60%] text-center"}
+      = graphical_icon "graph-stats-ascend", css_class: "mb-16 mx-auto h-[67px] w-[64px]"
+      %h2{class: "text-h1 leading-[132%] text-white mb-16"}
+        We&apos;ve grown to over 1M students entirely by word of mouth.
+      %p{class: "text-gray text-p-2xlarge"}
+        We work closely with our community to understand how to evolve Exercism
+        to be the best it can be, and they reward us by sharing with their
+        friends.
+
+    = ReactComponents::Impact::Chart.new([])
+
   .sm-container.mb-64.relative{ class: 'mt-[-64px]' }
     -# = ReactComponents::Impact::Rocket.new([])
     .bg-white.flex.flex-col.text-center.justify-center.rounded-32.pt-24.pb-40.px-48.shadow-lgv2
