--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -91,17 +91,21 @@
       And over
       %a.underline{ href: '#', title: 'Individual donors' } 700 individuals donors!
 
-  .relative
-    %div{class: "absolute top-[49px] left-[20%] flex flex-col w-[60%] text-center"}
-      = graphical_icon "graph-stats-ascend", css_class: "mb-16 mx-auto h-[67px] w-[64px]"
-      %h2{class: "text-h1 leading-[132%] text-white mb-16"}
-        We&apos;ve grown to over 1M students entirely by word of mouth.
-      %p{class: "text-gray text-p-2xlarge"}
-        We work closely with our community to understand how to evolve Exercism
-        to be the best it can be, and they reward us by sharing with their
-        friends.
 
-    = ReactComponents::Impact::Chart.new([])
+  .bg-repeat{class: 'bg-[#221E31] bg-[length:90px] bg-[url(photos/chart-bg.jpg)]'}
+    .md-container
+      .pt-48.flex.flex-col.items-center
+        .flex.flex-col.text-center{class: "max-w-[927px]"}
+          = graphical_icon "graph-stats-ascend", css_class: "mb-16 mx-auto h-[67px] w-[64px]"
+          %h2.text-h1.leading-128.text-white.mb-16
+            We&apos;ve grown to over 1M students entirely by word of mouth.
+          %p.text-gray.text-p-2xlarge
+            We work closely with our community to understand how to evolve Exercism
+            to be the best it can be, and they reward us by sharing with their
+            friends.
+
+    .relative{class: 'h-[400px]'}
+      = ReactComponents::Impact::Chart.new([])
 
   .sm-container.mb-64.relative{ class: 'mt-[-64px]' }
     -# = ReactComponents::Impact::Rocket.new([])
