Add fix grid bg

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -95,7 +95,7 @@
       And over
       %a.underline{ href: '#', title: 'Individual donors' } 700 individuals donors!
 
-  .relative
+  .relative{ class: 'h-[900px]' }
     = ReactComponents::Impact::Chart.new
     .absolute{ class: 'top-[50px] left-0 right-0' }
       .flex.flex-col.items-center
