Add fix height to sponsor images

--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -87,10 +87,10 @@
   .md-container.mb-64
     %h3.text-h3.text-center.mb-16 A special thanks to these organisations...
     .logos.flex.items-center.justify-center.flex-wrap.gap-64.mb-24
-      = icon "mozilla", "Mozilla", category: :partners, css_class: "mozilla"
-      = icon "gobridge", "GoBridge", category: :partners, css_class: "gobridge"
-      = icon "chicago", "University of Chicago", category: :partners, css_class: "chicago"
-      = icon "thalamus", "Thalamus AI", category: :partners
+      = icon "mozilla", "Mozilla", category: :partners, css_class: "mozilla h-48"
+      = icon "gobridge", "GoBridge", category: :partners, css_class: "gobridge h-[80px]"
+      = icon "chicago", "University of Chicago", category: :partners, css_class: "chicago h-48"
+      = icon "thalamus", "Thalamus AI", category: :partners, css_class: 'h-48'
     .text-center.text-18.leading-150.text-textColor6.font-semibold
       And over
       %a.underline{ href: '#', title: 'Individual donors' } 700 individuals donors!
