--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -95,7 +95,22 @@
       And over
       %a.underline{ href: '#', title: 'Individual donors' } 700 individuals donors!
 
-  .relative{ class: 'h-[900px]' }
+  .bg-repeat.overflow-hidden{ class: 'h-[900px] bg-[#221E31] bg-[length:90px] bg-[url(photos/chart-bg.jpg)]' }
+    .md-container
+      .pt-48.flex.flex-col.items-center
+        .flex.flex-col.text-center{ class: "max-w-[927px]" }
+          = graphical_icon "graph-stats-ascend", css_class: "mb-16 mx-auto h-[67px] w-[64px]"
+          %h2.text-h1.leading-128.text-white.mb-16
+            We&apos;ve grown to over 1M students entirely by word of mouth.
+          %p.text-gray.text-p-2xlarge
+            We work closely with our community to understand how to evolve Exercism
+            to be the best it can be, and they reward us by sharing with their
+            friends.
+
+    %div{ class: 'lg:mt-[-320px] md:mt-[-305px] mt-[-310px]' }
+      = ReactComponents::Impact::Chart.new
+
+  -# .relative{ class: 'h-[900px]' }
     = ReactComponents::Impact::Chart.new
     .absolute{ class: 'top-[50px] left-0 right-0' }
       .flex.flex-col.items-center
